--- a/index.html
+++ b/index.html
@@ -17,10 +17,7 @@
     <main>
       <section id="hero">
         <div class="logo-container">
-          <img
-            src="Blyth printing logos/blythPrintLogo.png"
-            alt="Blyth Print Shop Logo"
-          />
+          <img src="assets/blythPrintLogo.png" alt="Blyth Print Shop Logo" />
         </div>
       </section>
 
@@ -74,7 +71,7 @@
       </section>
 
       <section id="contact">
-        <h2>Contact Us</h2>
+        <!-- <h2>Contact Us</h2> -->
         <div class="contact-info">
           <div class="info-row">
             <div class="info-column">
