--- a/index.html
+++ b/index.html
@@ -7,7 +7,11 @@
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
     <link rel="manifest" href="/site.webmanifest" />
-    <title>Blyth Print Shop</title>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Yellowtail&display=swap"
+      rel="stylesheet"
+    />
+    <title>Blyth Printing Inc.</title>
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
@@ -18,6 +22,7 @@
       <section id="hero">
         <div class="logo-container">
           <img src="assets/blythPrintLogo.png" alt="Blyth Print Shop Logo" />
+          <div class="neon-tagline">...DESIGN..PRINT..REPEAT...</div>
         </div>
       </section>
 
@@ -82,9 +87,9 @@
             </div>
             <div class="info-column">
               <h3>Hours</h3>
-              <p>Monday - Friday: 9:00 AM - 5:00 PM</p>
-              <p>Saturday: 10:00 AM - 2:00 PM</p>
-              <p>Sunday: Closed</p>
+              <p>Monday - Thursday: 9:00 AM - 12:00 PM, 1:00 PM - 5:00 PM</p>
+              <p>Friday: 9:00 AM - 12:00 PM, 1:00 PM - 4:00 PM</p>
+              <p>Saturday - Sunday: Closed</p>
             </div>
           </div>
           <p class="phone">
