--- a/index.html
+++ b/index.html
@@ -22,7 +22,11 @@
       <section id="hero">
         <div class="logo-container">
           <img src="assets/blythPrintLogo.png" alt="Blyth Print Shop Logo" />
-          <div class="neon-tagline">...DESIGN..PRINT..REPEAT...</div>
+          <div class="neon-tagline">
+            <span class="neon-word">DESIGN</span>
+            <span class="neon-word">PRINT</span>
+            <span class="neon-word">REPEAT</span>
+          </div>
         </div>
       </section>
 
@@ -97,9 +101,15 @@
           </p>
         </div>
 
+        <div id="success-message" class="success-message" style="display: none">
+          Your message was successfully sent. We will get back to you as soon as
+          possible. Thank you for your inquiry!
+        </div>
+
         <form
+          id="contact-form"
           class="contact-form"
-          action="https://formspree.io/f/YOUR_FORM_ID"
+          action="https://formspree.io/f/xpwpadbw"
           method="POST"
         >
           <div class="form-group">
@@ -143,6 +153,41 @@
           .getElementById("contact")
           .scrollIntoView({ behavior: "smooth" });
       }
+
+      // Handle form submission
+      const form = document.getElementById("contact-form");
+      const successMessage = document.getElementById("success-message");
+
+      form.addEventListener("submit", function (e) {
+        e.preventDefault();
+        const formData = new FormData(form);
+
+        fetch(form.action, {
+          method: "POST",
+          body: formData,
+          headers: {
+            Accept: "application/json",
+          },
+        })
+          .then((response) => {
+            if (response.ok) {
+              // Hide the form
+              form.style.display = "none";
+              // Show success message
+              successMessage.style.display = "block";
+              // Scroll to success message
+              successMessage.scrollIntoView({ behavior: "smooth" });
+            } else {
+              throw new Error("Form submission failed");
+            }
+          })
+          .catch((error) => {
+            console.error("Error:", error);
+            alert(
+              "There was a problem submitting your form. Please try again."
+            );
+          });
+      });
     </script>
   </body>
 </html>
