--- a/index.html
+++ b/index.html
@@ -23,9 +23,7 @@
         <div class="logo-container">
           <img src="assets/blythPrintLogo.png" alt="Blyth Print Shop Logo" />
           <div class="neon-tagline">
-            <span class="neon-word">DESIGN</span>
-            <span class="neon-word">PRINT</span>
-            <span class="neon-word">REPEAT</span>
+            <span class="neon-text">DESIGN...PRINT...REPEAT</span>
           </div>
         </div>
       </section>
