--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
     </main>
 
     <footer>
-      <p>&copy; 2024 Blyth Print Shop. All rights reserved.</p>
+      <p>&copy; 2024 Blyth Printing Inc. All rights reserved.</p>
     </footer>
 
     <script>
