--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
     <link rel="manifest" href="/site.webmanifest" />
     <link
-      href="https://fonts.googleapis.com/css2?family=Yellowtail&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Rock+Salt&display=swap"
       rel="stylesheet"
     />
     <title>Blyth Printing Inc.</title>
@@ -23,7 +23,7 @@
         <div class="logo-container">
           <img src="assets/blythPrintLogo.png" alt="Blyth Print Shop Logo" />
           <div class="neon-tagline">
-            <span class="neon-text">DESIGN...PRINT...REPEAT</span>
+            <span class="neon-text">...DESIGN...PRINT...REPEAT...</span>
           </div>
         </div>
       </section>
