--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <div class="top-bar">
       <div class="social-links-top">
         <a
-          href="#"
+          href="https://www.facebook.com/profile.php?id=61573877912003"
           class="social-link facebook"
           target="_blank"
           rel="noopener noreferrer"
@@ -149,7 +149,7 @@
     <footer>
       <div class="social-links">
         <a
-          href="#"
+          href="https://www.facebook.com/profile.php?id=61573877912003"
           class="social-link facebook"
           target="_blank"
           rel="noopener noreferrer"
